* ``archive_cleanup`` storage errors are no longer fatal (just logged as
  errors now).  Total WAL segment storage size savings is reported after
  cleanup.  There is a 'dry run' mode available now to estimate cleanup
  effect before deleting actual items.
* Use botocore rather than boto for interfacing with S3. Botocore is the
  underlying and maintained library under the newer boto3 SDK.

pghoard 1.6.0 (2017-10-12)
==========================

* Support for PostgreSQL 10
* ``local-tar`` backups are now split to roughly 2 gigabyte chunks of
  plain-text files.  New basebackups now benefit from some parallelization,
  as up to 5 chunks may be uploaded in parallel while new backup chunks are
  being created.
* ``pghoard_restore`` can now download and extract chunked basebackups using
  all CPU cores of the machine assuming that the parallel download mechanism
  can deliver it chunks fast enough
* Alternative ``pghoard_postgres_command`` implementation in Go for faster
  startup times.  The time that the Python implementation takes to start
  limits WAL restore throughput quite a bit
* Remove support for ``pg_xlog_directory`` config variable, we now require
  ``pg_data_directory`` to be set in the config for the backup site.  This
  is done in order to stop guessing and possibly getting the answer wrong
  for the real location of the data.
* Miscellaneous bug fixes

pghoard 1.5.0 (2017-06-07)
==========================

* New tool, ``pghoard_archive_cleanup`` to clean up any orphan WAL segments
  from the object store
* Basebackup ``end-time`` and ``end-wal-segment`` are now stored in metadata and
  used for PITR when ``local-tar`` basebackups are used
* Azure object storage updated to work with the latest python-azure-storage
  module and promoted to production ready status
* Google object storage driver now retries operations on failure to work
  around transient connection reset and backend failure issues