@@ -15,6 +15,8 @@ pghoard X.X.X (unreleased)
   effect before deleting actual items.
 * Use botocore rather than boto for interfacing with S3. Botocore is the
   underlying and maintained library under the newer boto3 SDK.
+* Add a new --tablespace-base-dir option to restore so you can put all
+  the tablespaces under a single directory hierarchy.
 
 pghoard 1.6.0 (2017-10-12)
 ==========================
